--- a/.github/workflows/validate-and-regenerate.yml
+++ b/.github/workflows/validate-and-regenerate.yml
@@ -11,6 +11,9 @@ on:
     branches: [ main ]
   workflow_dispatch:  # Allow manual trigger
 
+permissions:
+  contents: write  # Allow workflow to push commits
+
 jobs:
   validate-and-regenerate:
     runs-on: ubuntu-latest
@@ -20,6 +23,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0  # Fetch all history for proper git operations
       
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -65,11 +69,11 @@ jobs:
       - name: Commit and push changes
         if: steps.check_changes.outputs.changes == 'true' && github.event_name == 'push'
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add manifest.json wallpapers/
-          git commit -m "🤖 Auto-regenerate manifest and thumbnails"
-          git push
+          git commit -m "🤖 Auto-regenerate manifest and thumbnails [skip ci]"
+          git push origin HEAD:main
       
       - name: Summary
         run: |
